@@ -1,3 +1,11 @@
+2008-04-01  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_add_video_stream),
+	(gst_asf_demux_process_ext_stream_props):
+	Instead of adding a fixes 25/1 framerate to the video caps, use the
+	average frame duration in the extended properties of the video stream as
+	the framerate. Fixes #524346.
+
 2008-03-21  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* configure.ac:
